[project]
name = "tapir"
version = "0.1.0"
description = ""
authors = [
    {name= "Théophile Madet", email= "theo.madet@posteo.net"},
    {name = "crosspolar",email = "18083323+crosspolar@users.noreply.github.com"}
]
license = {text = "AGPL"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.11,<6.0)",
    "django-weasyprint (>=2.3.0,<3.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-bootstrap-datepicker-plus (>=5.0.6,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "django-tables2 (>=2.8.0,<3.0.0)",
    "django-filter (>=25.2,<26.0)",
    "tablib (>=3.9.0,<4.0.0)",
    "django-phonenumber-field (>=8.3.0,<9.0.0)",
    "phonenumbers (>=9.0.16,<10.0.0)",
    "weasyprint (>=63.1,<64.0)",
    "django-select2 (>=8.4.3,<9.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-bootstrap5 (>=25.2,<26.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.0,<6.0.0)",
    "django-chartjs (>=2.3.0,<3.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "python-barcode (>=0.16.1,<0.17.0)",
    "fabric (>=3.2.2,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "django-auth-ldap (>=5.2.0,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-vite (>=3.1.0,<4.0.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "distinctipy[extras] (==1.3.4)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "icecream (>=2.1.8,<3.0.0)",
    "holidays (>=0.86,<0.87)",
]

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pre-commit = "^3.8.0"
werkzeug = "^3.1.3"
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
pytest-django = "^4.11.1"
pytest-sugar = "^1.1.1"
selenium = "^4.37.0"
factory-boy = "^3.3.3"
djlint = "^1.36.4"
pypdf = "^6.1.1"
django-upgrade = "^1.29.0"
django-silk = "^5.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "django"
max_line_length = 120
ignore = "T002,H006,H021,H025,H030,H031"
use_gitignore = true


[tool.coverage.run]
omit = [
    "*/migrations/*",
     "*/tests/*",
    "*/urls.py",
    "migrate.py"
]
relative_files = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tapir.settings"
python_files = ["tests.py", "test_*.py", "tests_*.py"]
testpaths = "tapir"
